// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link tests is a basic snapshot 1`] = `
<a
  aria-disabled="false"
  class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  "
  href="/"
>
  test link
</a>
`;

exports[`Link tests is a snapshot with isDisabled set to true 1`] = `
<a
  aria-disabled="false"
  class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 opacity-disabled cursor-not-allowed "
  href="/"
>
  test link
</a>
`;

exports[`Link tests is a snapshot with isExternal equal to true 1`] = `
<a
  aria-disabled="false"
  class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  "
  href="/"
  rel="noopener noreferrer"
>
  test link
</a>
`;
